@@ -40,6 +40,10 @@ IN DEVELOPMENT
     * When logging the changes to a particular file, there was a bug if there
       were ghosts in the revision ancestry. (John Arbash Meinel, #209948)
 
+    * Conversion from non-rich-root to rich-root(-pack) works correctly even
+      though search keys are not topologically sorted.
+      (Aaron Bentley, #177874)
+
   DOCUMENTATION:
 
     * Document outlining strategies for TortoiseBzr. (Mark Hammond)
